--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -16,24 +16,30 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
+    "css-loader": "^6.7.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "style-loader": "^3.3.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "4.9.5",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.0-beta.41",
+    "@storybook/addon-essentials": "^7.0.0-beta.41",
+    "@storybook/addon-interactions": "^7.0.0-beta.41",
+    "@storybook/addon-links": "^7.0.0-beta.41",
+    "@storybook/nextjs": "^7.0.0-beta.41",
+    "@storybook/react": "^7.0.0-beta.41",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "babel-loader": "^8.3.0",
-    "eslint-plugin-storybook": "^0.6.10"
+    "eslint-plugin-storybook": "^0.6.10",
+    "storybook": "^7.0.0-beta.41"
   }
 }
