--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "cosmos": "cosmos",
+    "cosmos:export": "cosmos-export"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -27,19 +27,11 @@
     "style-loader": "^3.3.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "4.9.5",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "yet-another-react-lightbox": "^2.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^7.0.0-beta.41",
-    "@storybook/addon-essentials": "^7.0.0-beta.41",
-    "@storybook/addon-interactions": "^7.0.0-beta.41",
-    "@storybook/addon-links": "^7.0.0-beta.41",
-    "@storybook/nextjs": "^7.0.0-beta.41",
-    "@storybook/react": "^7.0.0-beta.41",
-    "@storybook/testing-library": "^0.0.14-next.1",
-    "babel-loader": "^8.3.0",
-    "eslint-plugin-storybook": "^0.6.10",
-    "storybook": "^7.0.0-beta.41"
+    "babel-loader": "^8.3.0"
   }
 }
