Completed projects and experience page

--- a/src/pages/experience/projects.json
+++ b/src/pages/experience/projects.json
@@ -1,5 +1,38 @@
 [
   {
+    "titleAndShortDesc": "BidPro TripBoard - iOS and web tool for pilots",
+    "images": [
+      {
+        "src": "/images/tripboardweb.png"
+      },
+      {
+        "src": "/images/tripboardipad.PNG"
+      }
+    ],
+    "fullDescription": "BidPro TripBoard is a multiplatform application designed to allow pilots to view their schedules and trade various schedule aspects with other pilots. The iPad app is designed using Storybook and Swift, while the web version and backend are built using Angular and a .NET stack. I'm in charge of maintaining the entire stack for this project."
+  },
+  {
+    "titleAndShortDesc": "BidPro Bidder - iOS and web tool for pilots",
+    "images": [
+      {
+        "src": "/images/bidderipad.PNG"
+      },
+      {
+        "src": "/images/bidderipad2.PNG"
+      },
+      {
+        "src": "/images/bidderipad3.PNG"
+      },
+      {
+        "src": "/images/bidderipad4.PNG"
+      },
+      {
+        "src": "/images/bidderweb.png"
+      }
+    ],
+    "fullDescription": "BidPro Bidder is a multiplatform application designed to allow pilots to bid on their schedules. The iPad app is designed using Storybook and Swift, while the web version and backend are built using Angular and a .NET stack. I'm in charge of maintaining the entire stack for this project."
+  },
+  {
     "titleAndShortDesc": "Dreamstream - Fully featured social media platform",
     "images": [
       {
